--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 mybatis.mapper-locations=classpath:mappers/*.xml
 spring.mvc.static-path-pattern=/static/**
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://47.93.251.147:3306/hangduoTest?useSSL=false&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://localhost:3306/hangduoTest?useSSL=false&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
-spring.datasource.password = hangduo
+spring.datasource.password = 0327
 useSSL=true
