--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.url = jdbc:mysql://localhost:3306/hangduoTest?useSSL=false&use
 spring.datasource.username = root
 spring.datasource.password = 0327
 useSSL=true
+multipart.maxFileSize=50Mb
+## 设置所有文件最大内存
+multipart.maxRequestSize=50Mb
+## 自定义文件上传路径
+web.upload-path=F:/images
